# ravi-simplex

./: CMakeLists.txt
lua/: aot.lua  luasimplex.lua  simple-test.lua  test-netlib.lua
lua/luasimplex/: rsm.lua
